# piezo_dataset_builder

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG-DOCKER.md  DOCKER.md  Dockerfile  ERA5_SETUP.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  start-docker.bat  start-docker.sh  test_era5.py
examples/: codes_stations_piezo.csv
src/piezo_dataset_builder/: __init__.py  app.py
src/piezo_dataset_builder/api/: __init__.py  era5.py  era5_local.py  hubeau.py  meteo.py
src/piezo_dataset_builder/core/: __init__.py  dataset_builder.py  validator.py
src/piezo_dataset_builder/utils/: __init__.py  export.py
