[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piezo-dataset-builder"
version = "1.0.0"
description = "Application Streamlit pour construire des datasets piézométriques complets depuis Hub'Eau et Open-Meteo"
authors = [
    {name = "BRGM", email = "contact@brgm.fr"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/brgm/piezo-dataset-builder"
Documentation = "https://github.com/brgm/piezo-dataset-builder#readme"
Repository = "https://github.com/brgm/piezo-dataset-builder"
Issues = "https://github.com/brgm/piezo-dataset-builder/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
